<resources>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Discover Page Start -->
    <string name="discoverActionDonateContentDesc">Donate</string>
    <string name="discoverActionHistoryContentDesc">History</string>
    <string name="discoverActionStartIdentifyContentDesc">Start identifying music</string>
    <string name="discoverActionStopIdentifyContentDesc">Stop identifying music</string>
    <string name="discoverStatusTapToIdentify">Tap to identify</string>
    <string name="permission_rationale">Audio recording permissions are requered for this app</string>
    <string name="ok">Ok</string>


      <!-- String for passing extras to the intent that launches song details page -->

    <string name="song_name_extra">songName</string>
    <string name="song_album_extra">albumName</string>
    <string name="song_artist_extra">songArtist</string>
    <string name="song_youtube_id">vidId</string>
    <string name="isrc_id_extra">spotifyId</string>
    <!-- Discover Page End -->

    <!-- Song details page start-->

    <string name="name_label">Name:</string>
    <string name="artist_label">Artist:</string>
    <string name="album_label">Album:</string>
    <string name="youtube_api_key">AIzaSyBOxkCRPooDWS7zyC5tQR0_SWTSAdI_XUk</string>

    <!-- Song details page end -->

    <!-- Song history page -->

    <string name="song_history_error">No songs saved yet.</string>
    <string name="history_title">History</string>

    <!-- Song history page end -->

    <!-- Intro activity start -->

    <string name="slide_one_title">Identify</string>
    <string name="slide_one_description">Identify music playing around you</string>

    <string name="slide_two_title">Grant Permissions</string>
    <string name="slide_two_description">All the songs that you discovered will be saved automatically</string>

    <string name="slide_three_title">Let\'s Begin</string>
    <string name="slide_three_description">Lets start identifying.</string>

    <!-- Intro activity end -->

</resources>
